--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,44 +1,16 @@
-@import "fonts";
-@import "tipography";
-@import "reset";
+@import "core/settings"; // são definidas as váriaveis
 
-// @import './../../node_modules/bootstrap/dist/css/bootstrap.min.css';
-@import './../../node_modules/bootstrap/scss/bootstrap';
+// core, são definidos os blocos de layout e formatação dos elementos genéricos.
+@import "core/fonts";
+@import "core/tipography";
+@import "core/reset";
+
+@import "helpers/images";
+
+@import "modules/header";
+@import "modules/footer";
 
 /**
-* Nav
+ *  bibliotecas de terceiros.
 */
-.navbar {
-  height: 80px;
-  padding: 0;
-}
-
-.navbar-toggler {
-  position: absolute;
-}
-
-.navbar-brand {
-  height: 80px;
-  margin: 0;
-}
-
-.img-logo {
-  height: 100px;
-}
-
-.img-circle {
-  border-radius: 100%;
-  height: 200px;
-  object-fit: cover;
-  width: 200px;  
-}
-
-.img-opacity {
-  -webkit-filter: opacity(.2);
-  filter: opacity(.2);
-}
-
-.img-blur {
-  -webkit-filter: blur(5px);
-  filter: blur(5px);
-}
+@import './../../node_modules/bootstrap/scss/bootstrap';
