versão sem materialize

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,4 @@
+@import "./../../node_modules/material-icons/iconfont/material-icons.css";
 @import "core/settings"; // são definidas as váriaveis
 
 // core, são definidos os blocos de layout e formatação dos elementos genéricos.
