versão de visualização

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -15,6 +15,7 @@
 @import "core/tipography";
 
 // @import "helpers/images";
+@import "helpers/parallax";
 
 @import "modules/header";
 // @import "modules/footer";
